<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#22000000">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/main_color"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="@color/main_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/user_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"

                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_qqLogin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/qq"/>

                <Button
                    android:id="@+id/weixinLogin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/weixin"/>

                <CheckBox
                    android:id="@+id/cb_savePass"
                    style="@style/CustomCheckBoxTheme"
                    android:layout_width="wrap_content"
                    android:textColor="@drawable/checkbox_text_color_selecter"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:text="@string/aotulogin"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/login"

                    android:textColor="#d3d3d3"
                    >
                </Button>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/forget_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cv"
        android:layout_alignTop="@id/cv"
        android:layout_marginEnd="-20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        app:backgroundTint="@color/main_color"
        app:fabSize="normal"
        />

</RelativeLayout>
